src/test/deca/syntax/valid/if_else_return.deca
{
    if(true){
        return 0;
    }else {

    return 1;
    }
}