src/test/deca/syntax/invalid/else_ident.deca

{
    float else = 1.5;
}